--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -8,4 +8,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
          />
+
+    <Button
+        android:id="@+id/activity_cart_goToCheckout_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_margin="8dp"
+        android:text="Go to checkout!" />
+
 </RelativeLayout>
